--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "discord-interactions": "^3.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "moment": "^2.30.1",
     "node-fetch": "^3.3.0"
   },
   "devDependencies": {
